[package]
name = "netchaos-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
netchaos-common = { path = "../netchaos-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "netchaos"
path = "src/main.rs"
